--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@
 
 lib_LTLIBRARIES = libieee1284.la
 libieee1284_la_SOURCES = detect.c detect.h ports.c deviceid.c state.c \
-	registers.c blockio.c parport.h ppdev.h
+	access.h delay.h delay.c default.h default.c access_io.c \
+	access_ppdev.c interface.c parport.h ppdev.h
 include_HEADERS = ieee1284.h
 
 noinst_PROGRAMS = test
