--- a/configure.in
+++ b/configure.in
@@ -20,4 +20,4 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 
 dnl Checks for library functions.
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile libieee1284.spec)
