--- a/libieee1284.spec.in
+++ b/libieee1284.spec.in
@@ -40,26 +40,26 @@ MAN3=%{buildroot}%{_mandir}/man3
 install -m 644 doc/*.3 ${MAN3}
 for fn in read_control write_control frob_control do_nack_handshake
 do
-	ln -s ieee1284_control.3 ${MAN3}/ieee1284_${fn}.3.gz
+	ln -s ieee1284_control.3 ${MAN3}/ieee1284_${fn}.3
 done
-ln -s ieee1284_ecp_fwd_to_rev.3 ${MAN3}/ieee1284_ecp_rev_to_fwd.3.gz
+ln -s ieee1284_ecp_fwd_to_rev.3 ${MAN3}/ieee1284_ecp_rev_to_fwd.3
 for fn in negotiate terminate
 do
-	ln -s ieee1284_negotiation.3 ${MAN3}/ieee1284_${fn}.3.gz
+	ln -s ieee1284_negotiation.3 ${MAN3}/ieee1284_${fn}.3
 done
 for fn in read wait
 do
-	ln -s ieee1284_status.3 ${MAN3}/ieee1284_${fn}_status.3.gz
+	ln -s ieee1284_status.3 ${MAN3}/ieee1284_${fn}_status.3
 done
 for fn in nibble_read compat_write byte_read epp_read_data \
 	epp_write_data epp_read_addr epp_write_addr ecp_read_data \
 	ecp_write_data ecp_read_addr ecp_write_addr
 do
-	ln -s ieee1284_transfer.3 ${MAN3}/ieee1284_${fn}.3.gz
+	ln -s ieee1284_transfer.3 ${MAN3}/ieee1284_${fn}.3
 done
 for fn in read_data write_data data_dir
 do
-	ln -s ieee1284_data.3 ${MAN3}/ieee1284_${fn}.3.gz
+	ln -s ieee1284_data.3 ${MAN3}/ieee1284_${fn}.3
 done
 
 %clean
