--- a/configure.in
+++ b/configure.in
@@ -1,15 +1,18 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(ieee1284.h)
-AM_INIT_AUTOMAKE(libieee1284, 0.1.5)
-AM_CONFIG_HEADER(config.h)
+AC_INIT(libieee1284, 0.1.5)
+AC_CONFIG_SRCDIR(libieee1284.spec.in)
+AM_INIT_AUTOMAKE([dist-bzip2 subdir-objects 1.6])
+AC_PREREQ(2.53)
+AM_CONFIG_HEADER(include/config.h)
 
 dnl Checks for programs.
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 
 dnl Checks for libraries.
 
@@ -19,4 +22,5 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 
 dnl Checks for library functions.
 
-AC_OUTPUT(Makefile libieee1284.spec)
+AC_CONFIG_FILES(Makefile libieee1284.spec)
+AC_OUTPUT
