2002-07-06  Tim Waugh  <twaugh@redhat.com>
	Apply patch from Matthew Duggan for Solaris/x86 and Cygwin/(NT|95)
	ports.

	* solaris_io: New directory.
	* solaris_io/INSTALL, solaris_io/LICENSE, solaris_io/Makefile.in,
	solaris_io/README, solaris_io/iop.c, solaris_io/iop.conf,
	solaris_io/ioprtest.c: New files.  These are for the Solaris
	driver and are not linked in with libieee1284.
	* src/access_lpt.c: New file for access for VDMLPT on NT kernels.
	* src/io_95.h, src/par_nt.h: New files for Cygwin ports.
	* configure.in: Solaris/Cygwin additions.
	* Makefile.am: Solaris/Cygwin additions.
	* include/ieee1284.h: Include <sys/time.h> for struct timeval.
	* src/access.h: Declare lpt_access_methods.
	* src/access_io.c: Modifications for Solaris/Cygwin.
	* src/access_ppdev.c: Modifications for when ppdev is not
	available on this platform.
	* src/detect.c: Modifications for Solaris/Cygwin.
	* src/detect.h: Likewise.
	* src/deviceid.c: Remove redundant includes.
	* src/ports.c: Modifications for Solaris/Cygwin.
	* src/state.c: Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@
 lib_LTLIBRARIES = libieee1284.la
 libieee1284_la_SOURCES = src/detect.c src/detect.h src/ports.c src/deviceid.c \
 	src/state.c src/access.h src/delay.h src/delay.c src/default.h \
-	src/default.c src/access_io.c src/access_ppdev.c src/interface.c \
-	src/parport.h src/ppdev.h src/debug.h src/debug.c \
+	src/default.c src/access_io.c src/access_ppdev.c src/access_lpt.c \
+	src/interface.c src/parport.h src/ppdev.h src/debug.h src/debug.c \
 	libieee1284.sym
 # When rolling a release, remember to adjust the version info.
 # It's current:release:age.
@@ -67,3 +67,5 @@ DISTCLEANFILES = include/stamp-h include/stamp-h[0-9]* \
 	doc/manpage.links doc/manpage.refs
 
 MAINTAINERCLEANFILES = $(man3_MANS)
+
+SUBDIRS = @SOLARIS_IO@
