2002-07-21  Matthew Duggan  <stauff1@users.sourceforge.net>
        * README.OpenBSD: Notes on use in OpenBSD
        * README: It's not Linux-only any more...
        * configure.in: Additions for OpenBSD
        * src/io_95.h: Moved..
        * src/io.h: to this (now used in OBSD too)
        * src/access_io.c: Modifications for OpenBSD.
        * src/detect.c: ditto.
        * src/ports.c: ditto.

--- a/configure.in
+++ b/configure.in
@@ -24,6 +24,10 @@ case "{$host}" in
 *-*-linux*)
         AC_DEFINE(HAVE_LINUX,1,enable ppdev access)
 ;;
+*86-*-openbsd*)
+        AC_DEFINE(HAVE_OBSD_I386,1,enable OpenBSD i386 ioperm access)
+	LIBS="-li386"
+;;
 *86-*-solaris*)
         AC_DEFINE(HAVE_SOLARIS,1,enable solaris iop access)
 	SOLARIS_IO="solaris_io"
