2002-09-15  Matthew Duggan  <stauff1@users.sourceforge.net>
        * configure.in: Added check for FreeBSD/i386
        * README.FreeBSD: Notes on FreeBSD use
        * src/access_io.c: Open /dev/io for port access in FreeBSD
        * src/detect.c (check_io): Check if /dev/io is available in FreeBSD
        * src/ports.c (populate_by_guessing): Guessing for FreeBSD

--- a/configure.in
+++ b/configure.in
@@ -28,6 +28,9 @@ case "{$host}" in
         AC_DEFINE(HAVE_OBSD_I386,1,enable OpenBSD i386 ioperm access)
 	LIBS="-li386"
 ;;
+*86-*-freebsd*)
+        AC_DEFINE(HAVE_FBSD_I386,1,enable FreeBSD /dev/io access)
+;;
 *86-*-solaris*)
         AC_DEFINE(HAVE_SOLARIS,1,enable solaris iop access)
 	SOLARIS_IO="solaris_io"
