2002-09-26  Julien BLACHE  <jblache@debian.org>
        * configure.in: Test for sys/io.h.
        * src/access_io.c, src/detect.c: Check for sys/io.h

--- a/configure.in
+++ b/configure.in
@@ -18,6 +18,8 @@ dnl Checks for libraries.
 
 dnl Checks for header files.
 
+AC_CHECK_HEADERS(sys/io.h)
+
 dnl Checks for typedefs, structures, and compiler characteristics.
 SOLARIS_IO=""
 case "{$host}" in
