--- a/configure.in
+++ b/configure.in
@@ -59,5 +59,5 @@ AM_CONDITIONAL(SOLARIS_IO, test x$solaris_io = xtrue)
 
 dnl Checks for library functions.
 
-AC_CONFIG_FILES(Makefile libieee1284.spec solaris_io/Makefile)
+AC_CONFIG_FILES(Makefile libieee1284.spec)
 AC_OUTPUT
