2004-02-03  Tim Waugh  <twaugh@redhat.com>
        * src/ieee1284module.c: Python extension module.
        * configure.in: Check for Python paths.
        * Makefile.am: Build and install Python extension module.
        * libieee1284.spec.in: Ship it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,13 @@ bin_PROGRAMS = libieee1284_test
 libieee1284_test_SOURCES = tests/test.c
 libieee1284_test_LDADD = libieee1284.la
 
+# Python bindings
+pyexec_LTLIBRARIES = src/ieee1284module.la
+src_ieee1284module_la_LDFLAGS = -module -avoid-version
+src_ieee1284module_la_LIBADD = libieee1284.la
+src_ieee1284module_la_CFLAGS = -I/usr/include/python$(PYTHON_VERSION) -fpic
+src_ieee1284module_la_SOURCES = src/ieee1284module.c
+
 man3_MANS = doc/libieee1284.3 \
 	doc/parport.3 \
 	doc/parport_list.3 \
