* TODO: Add some more TODOs * README.MinGW: Notes on the new MinGW port. * README.VC6: Notes on the new VC6 port. * README.winNT: Note that EXCL is implicit in NT.
Applying patch from Daniel Horchner:
* Makefile.vc6 ieee1284.def include/config.h.vc6: Build files for VC6.
* configure.in: Add MinGW support
* include/ieee1284.h M src/access.h src/access_io.c src/access_lpt.c
  src/access_ppdev.c src/debug.c src/default.c src/delay.c
  src/detect.c src/detect.h src/deviceid.c src/io.h src/ports.c
  src/state.c: Patched for MinGW support and VC6 support.

--- a/configure.in
+++ b/configure.in
@@ -50,6 +50,10 @@ case "{$host}" in
         ;;
         esac
 ;;
+*-*-mingw*)
+dnl        AC_DEFINE(HAVE_CYGWIN_9X,1,enable win95 access)
+        AC_DEFINE(HAVE_CYGWIN_NT,1,enable w32api access)
+;;
 *)
         AC_MSG_ERROR(Sorry.  $host is not supported yet)
 ;;
