2005-03-04  Tim Waugh  <twaugh@redhat.com>
        * configure.in: Patch from Robin Elfrink <elfrink@introweb.nl> to
        allow building on Debian GNU/kFreeBSD
        (http://www.debian.org/ports/kfreebsd-gnu/).

--- a/configure.in
+++ b/configure.in
@@ -30,7 +30,7 @@ case "{$host}" in
         AC_DEFINE(HAVE_OBSD_I386,1,enable OpenBSD i386 ioperm access)
 	LIBS="-li386"
 ;;
-*86-*-freebsd*)
+*86-*-freebsd* | *86-*-kfreebsd*)
         AC_DEFINE(HAVE_FBSD_I386,1,enable FreeBSD /dev/io access)
 ;;
 *86-*-solaris*)
