--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(libieee1284, 0.2.10pre2)
+AC_INIT(libieee1284, 0.2.10)
 AC_CONFIG_SRCDIR(libieee1284.spec.in)
 AM_INIT_AUTOMAKE([dist-bzip2 subdir-objects 1.6])
 AC_PREREQ(2.53)
