--- a/configure.in
+++ b/configure.in
@@ -82,5 +82,5 @@ fi
 
 dnl Checks for library functions.
 
-AC_CONFIG_FILES([Makefile libieee1284.spec include/ieee1284.h])
+AC_CONFIG_FILES([Makefile libieee1284.spec libieee1284.pc include/ieee1284.h])
 AC_OUTPUT
